--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-  --primary-color: #f7f5f8;
-  --white: #ffffff;
+  --primary-color: "#f7f5f8";
+  --white: "#ffffff";
 
   --font: "Poppins", sans-serif;
 }
@@ -26,7 +22,7 @@ body {
 }
 
 body {
-  background-color: var(--primary-color);
+  background-color: #f7f5f8 !important;
   font-family: var(--font);
 }
 
